fix(ai-kb): code review fixes
Critical:
- KbAdminController: remove external tenantId param, use LoginHelper instead
- KbAdminController: add @DS("master") for datasource routing

Important:
- JinaRerankerClient: @Component → @Service for @DS annotation compatibility
- JinaRerankerClient: merge resolve+rerank into single resolveAndRerank to avoid double DB query
- JinaRerankerClient: use ArrayList(subList) to avoid immutable view issues
- KbRetrievalService: remove redundant chunkMapper, reuse reranker's chunk resolution
- KbRetrievalService: buildCitations uses already-resolved chunks (no second MySQL query)